--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			X
 		</div>
 		<div class="boxcontent" style="height: 270px; width: 590px;">
-			<img src="img/gh2016.png" width="590">
+			<img src="/img/gh2016.png" width="590">
 		</div>
 	</div>
 
@@ -75,7 +75,7 @@
 			X
 		</div>
 		<div class="boxcontent" style="height: 290px; width: 290px;">
-			<img src="img/blender.png" width="400" style="margin-top: -20px; margin-left: -40px;">
+			<img src="/img/blender.png" width="400" style="margin-top: -20px; margin-left: -40px;">
 		</div>
 	</div>
 
